--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-  <div style="color: blue;">Ivan</div>
+  <div style="color: green;">Ivan</div>
 </body>
 </html>
